maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:53: error: not found: value Abs
    if (sol>=Abs(sol-getIndication(x,y-1))>=2){
             ^ShortestPathMaze:58: error: not found: value Abs
    if (sol>=Abs(sol-getIndication(x-1,y))>=2){
             ^ShortestPathMaze:63: error: not found: value Abs
    if (sol>=Abs(sol-getIndication(x+1,y))>=2){
             ^ShortestPathMaze:68: error: not found: value Abs
    if (sol>=Abs(sol-getIndication(x,y-1))>=2){
             ^